--- a/archives/toutiao-search/2023-11-03.md
+++ b/archives/toutiao-search/2023-11-03.md
@@ -1,57 +1,75 @@
 # 2023-11-03
 
-共 127 条
+共 141 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Nov 03 2023 11:00:52 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Nov 03 2023 12:01:01 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [三轮车转弯速度过快撞上汽车](https://so.toutiao.com/search?keyword=三轮车转弯速度过快撞上汽车)
-1. [拜登提名中国问题专家出任副国务卿](https://so.toutiao.com/search?keyword=拜登提名中国问题专家出任副国务卿)
-1. [女儿不能吃东西 爸爸用针管喂流食](https://so.toutiao.com/search?keyword=女儿不能吃东西+爸爸用针管喂流食)
+1. [男子多次救娃后拍视频提醒被诉侵权](https://so.toutiao.com/search?keyword=男子多次救娃后拍视频提醒被诉侵权)
+1. [支原体肺炎不宜自行服用“三件套”](https://so.toutiao.com/search?keyword=支原体肺炎不宜自行服用“三件套”)
 1. [巴以冲突一旦战争外溢意味着啥](https://so.toutiao.com/search?keyword=巴以冲突一旦战争外溢意味着啥)
-1. [哈马斯头号领导人到底有没有被抓](https://so.toutiao.com/search?keyword=哈马斯头号领导人到底有没有被抓)
-1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
+1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
+1. [老爸调侃女儿放学玩秋千被当场反击](https://so.toutiao.com/search?keyword=老爸调侃女儿放学玩秋千被当场反击)
+1. [媒体人：感觉王哲林已经不想打球了](https://so.toutiao.com/search?keyword=媒体人：感觉王哲林已经不想打球了)
 1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
 1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
-1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
-1. [黎巴嫩真主党发公开信声援哈马斯](https://so.toutiao.com/search?keyword=黎巴嫩真主党发公开信声援哈马斯)
-1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
-1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
-1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
-1. [以空袭加沙中部难民营造成至少15死](https://so.toutiao.com/search?keyword=以空袭加沙中部难民营造成至少15死)
-1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
-1. [快船总裁：我们不是让哈登带队赢球](https://so.toutiao.com/search?keyword=快船总裁：我们不是让哈登带队赢球)
 1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
-1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
-1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
 1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
-1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
+1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
+1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
+1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
+1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
+1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
+1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
+1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
+1. [央视战地记者已在巴以前线超24天](https://so.toutiao.com/search?keyword=央视战地记者已在巴以前线超24天)
+1. [媒体：“习惯”不是哄抢的辩护词](https://so.toutiao.com/search?keyword=媒体：“习惯”不是哄抢的辩护词)
+1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [美众议院投票通过对以色列援助法案](https://so.toutiao.com/search?keyword=美众议院投票通过对以色列援助法案)
+1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
+1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
 1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
+1. [女儿不能吃东西 爸爸用针管喂流食](https://so.toutiao.com/search?keyword=女儿不能吃东西+爸爸用针管喂流食)
+1. [快船总裁：我们不是让哈登带队赢球](https://so.toutiao.com/search?keyword=快船总裁：我们不是让哈登带队赢球)
+1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
 1. [西方400年与中国40年有何相似之处](https://so.toutiao.com/search?keyword=西方400年与中国40年有何相似之处)
+1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
+1. [男子因高彩礼退婚拿16.8万辞职旅行](https://so.toutiao.com/search?keyword=男子因高彩礼退婚拿16.8万辞职旅行)
+1. [专家谈拜登提名坎贝尔出任副国务卿](https://so.toutiao.com/search?keyword=专家谈拜登提名坎贝尔出任副国务卿)
+1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [哥伦比亚男子遭人当街枪击头部身亡](https://so.toutiao.com/search?keyword=哥伦比亚男子遭人当街枪击头部身亡)
+1. [中方：美对古巴单边强制措施须终止](https://so.toutiao.com/search?keyword=中方：美对古巴单边强制措施须终止)
+1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
+1. [男子当街持榔头袭击女子？警方通报](https://so.toutiao.com/search?keyword=男子当街持榔头袭击女子？警方通报)
+1. [三轮车转弯速度过快撞上汽车](https://so.toutiao.com/search?keyword=三轮车转弯速度过快撞上汽车)
+1. [为何今年肺炎支原体感染来势汹汹](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染来势汹汹)
+1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
+1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
+1. [当事人回应被路怒女子咬掉一块肉](https://so.toutiao.com/search?keyword=当事人回应被路怒女子咬掉一块肉)
+1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
+1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
+1. [拜登提名中国问题专家出任副国务卿](https://so.toutiao.com/search?keyword=拜登提名中国问题专家出任副国务卿)
+1. [哈马斯头号领导人到底有没有被抓](https://so.toutiao.com/search?keyword=哈马斯头号领导人到底有没有被抓)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [黎巴嫩真主党发公开信声援哈马斯](https://so.toutiao.com/search?keyword=黎巴嫩真主党发公开信声援哈马斯)
+1. [以空袭加沙中部难民营造成至少15死](https://so.toutiao.com/search?keyword=以空袭加沙中部难民营造成至少15死)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
 1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
-1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
 1. [被污蔑地铁偷拍男子：希望有好结果](https://so.toutiao.com/search?keyword=被污蔑地铁偷拍男子：希望有好结果)
-1. [媒体：“习惯”不是哄抢的辩护词](https://so.toutiao.com/search?keyword=媒体：“习惯”不是哄抢的辩护词)
 1. [浙江一中职毕业生拒服兵役被罚5万](https://so.toutiao.com/search?keyword=浙江一中职毕业生拒服兵役被罚5万)
-1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
-1. [当事人回应被路怒女子咬掉一块肉](https://so.toutiao.com/search?keyword=当事人回应被路怒女子咬掉一块肉)
 1. [副市长与同事暧昧 妻子被逼离婚](https://so.toutiao.com/search?keyword=副市长与同事暧昧+妻子被逼离婚)
 1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
 1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
 1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
-1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
 1. [俄撤销批准《全面禁止核试验条约》](https://so.toutiao.com/search?keyword=俄撤销批准《全面禁止核试验条约》)
-1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
 1. [旅游大巴撞上悬崖边护栏8人受伤](https://so.toutiao.com/search?keyword=旅游大巴撞上悬崖边护栏8人受伤)
-1. [男子多次救娃后拍视频提醒被诉侵权](https://so.toutiao.com/search?keyword=男子多次救娃后拍视频提醒被诉侵权)
-1. [中方：美对古巴单边强制措施须终止](https://so.toutiao.com/search?keyword=中方：美对古巴单边强制措施须终止)
 1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
-1. [男子当街持榔头袭击女子？警方通报](https://so.toutiao.com/search?keyword=男子当街持榔头袭击女子？警方通报)
 1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
 1. [为什么说美国在进行芯片内战](https://so.toutiao.com/search?keyword=为什么说美国在进行芯片内战)
 1. [缅北混战幕后“操盘手”是谁](https://so.toutiao.com/search?keyword=缅北混战幕后“操盘手”是谁)
@@ -60,9 +78,7 @@
 1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
 1. [缅甸内战真是因为电诈问题吗](https://so.toutiao.com/search?keyword=缅甸内战真是因为电诈问题吗)
 1. [媒体：农作物遭哄抢秋收管理需加强](https://so.toutiao.com/search?keyword=媒体：农作物遭哄抢秋收管理需加强)
-1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
 1. [缅甸国管委承认已失去3个城镇](https://so.toutiao.com/search?keyword=缅甸国管委承认已失去3个城镇)
-1. [专家谈拜登提名坎贝尔出任副国务卿](https://so.toutiao.com/search?keyword=专家谈拜登提名坎贝尔出任副国务卿)
 1. [缅甸决心年内消除缅北网赌电诈](https://so.toutiao.com/search?keyword=缅甸决心年内消除缅北网赌电诈)
 1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
 1. [媒体：宋凯全程观看中韩女足直播](https://so.toutiao.com/search?keyword=媒体：宋凯全程观看中韩女足直播)
@@ -82,7 +98,6 @@
 1. [河道拓宽挖出不明管道 水利局回应](https://so.toutiao.com/search?keyword=河道拓宽挖出不明管道+水利局回应)
 1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
 1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
-1. [男子因高彩礼退婚拿16.8万辞职旅行](https://so.toutiao.com/search?keyword=男子因高彩礼退婚拿16.8万辞职旅行)
 1. [小鹏汽车疑因磕到底盘在街头自燃](https://so.toutiao.com/search?keyword=小鹏汽车疑因磕到底盘在街头自燃)
 1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
 1. [华为小米新机大卖预示着什么](https://so.toutiao.com/search?keyword=华为小米新机大卖预示着什么)
@@ -115,7 +130,6 @@
 1. [海关查获8万吨福岛三文鱼？不实](https://so.toutiao.com/search?keyword=海关查获8万吨福岛三文鱼？不实)
 1. [伪造身份敛财贪官再添一人](https://so.toutiao.com/search?keyword=伪造身份敛财贪官再添一人)
 1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
-1. [哥伦比亚男子遭人当街枪击头部身亡](https://so.toutiao.com/search?keyword=哥伦比亚男子遭人当街枪击头部身亡)
 1. [康师傅回应饮品涨价](https://so.toutiao.com/search?keyword=康师傅回应饮品涨价)
 1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
 1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
