--- a/archives/zhihu-search/2023-11-03.md
+++ b/archives/zhihu-search/2023-11-03.md
@@ -1,17 +1,19 @@
 # 2023-11-03
 
-共 10 条
+共 12 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Fri Nov 03 2023 11:00:52 GMT+0800 (China Standard Time) -->
-1. [万圣节](https://www.zhihu.com/search?q=万圣节)
+<!-- 最后更新时间 Fri Nov 03 2023 12:01:01 GMT+0800 (China Standard Time) -->
+1. [定向选调生](https://www.zhihu.com/search?q=定向选调生)
 1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
 1. [三大指数集体低开](https://www.zhihu.com/search?q=三大指数集体低开)
 1. [智能手表推荐](https://www.zhihu.com/search?q=智能手表推荐)
 1. [A股](https://www.zhihu.com/search?q=A股)
+1. [vivo 蓝河操作系统](https://www.zhihu.com/search?q=vivo 蓝河操作系统)
 1. [优衣库涨薪](https://www.zhihu.com/search?q=优衣库涨薪)
 1. [金鸡奖](https://www.zhihu.com/search?q=金鸡奖)
 1. [非全日制计算机研究生](https://www.zhihu.com/search?q=非全日制计算机研究生)
 1. [考研流程详解](https://www.zhihu.com/search?q=考研流程详解)
+1. [万圣节](https://www.zhihu.com/search?q=万圣节)
 1. [国考备考经验](https://www.zhihu.com/search?q=国考备考经验)
 <!-- END ZHIHUSEARCH -->
