--- a/archives/toutiao-search/2023-11-03.md
+++ b/archives/toutiao-search/2023-11-03.md
@@ -1,64 +1,81 @@
 # 2023-11-03
 
-共 160 条
+共 172 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Nov 03 2023 14:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Nov 03 2023 15:00:38 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
+1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
+1. [吴子嘉批柯文哲搞过头：支持者跑了](https://so.toutiao.com/search?keyword=吴子嘉批柯文哲搞过头：支持者跑了)
+1. [男子在药店和街头暴打女子](https://so.toutiao.com/search?keyword=男子在药店和街头暴打女子)
 1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
+1. [伪造身份敛财贪官再添一人](https://so.toutiao.com/search?keyword=伪造身份敛财贪官再添一人)
+1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
+1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
+1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
+1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
+1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
+1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
+1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
+1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
+1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
+1. [拜登政府敦促国会：援乌不能停](https://so.toutiao.com/search?keyword=拜登政府敦促国会：援乌不能停)
+1. [中方：应坚持两国方案解决巴以问题](https://so.toutiao.com/search?keyword=中方：应坚持两国方案解决巴以问题)
+1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
+1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
+1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
+1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
+1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
+1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
+1. [联合国秘书长谴责袭击加沙难民营](https://so.toutiao.com/search?keyword=联合国秘书长谴责袭击加沙难民营)
+1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
+1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
+1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
+1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
+1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
+1. [102辆运载援助物资的卡车进入加沙](https://so.toutiao.com/search?keyword=102辆运载援助物资的卡车进入加沙)
+1. [向太辟谣李连杰去世](https://so.toutiao.com/search?keyword=向太辟谣李连杰去世)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
+1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
+1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
+1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
+1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
+1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
+1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
+1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
+1. [老爸调侃女儿放学玩秋千被当场反击](https://so.toutiao.com/search?keyword=老爸调侃女儿放学玩秋千被当场反击)
+1. [苏群：文班接受了又一次淬炼](https://so.toutiao.com/search?keyword=苏群：文班接受了又一次淬炼)
+1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
+1. [李佳琦直播间疑为冲销量未付先送](https://so.toutiao.com/search?keyword=李佳琦直播间疑为冲销量未付先送)
+1. [女儿不能吃东西 爸爸用针管喂流食](https://so.toutiao.com/search?keyword=女儿不能吃东西+爸爸用针管喂流食)
 1. [支原体肺炎不宜自行服用“三件套”](https://so.toutiao.com/search?keyword=支原体肺炎不宜自行服用“三件套”)
 1. [中央气象台：北方正受冷空气影响](https://so.toutiao.com/search?keyword=中央气象台：北方正受冷空气影响)
 1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
-1. [老爸调侃女儿放学玩秋千被当场反击](https://so.toutiao.com/search?keyword=老爸调侃女儿放学玩秋千被当场反击)
-1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
-1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
-1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
-1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
 1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
-1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
-1. [联合国秘书长谴责袭击加沙难民营](https://so.toutiao.com/search?keyword=联合国秘书长谴责袭击加沙难民营)
-1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
-1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
-1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
-1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
 1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
 1. [产妇深夜大出血8000毫升被救回](https://so.toutiao.com/search?keyword=产妇深夜大出血8000毫升被救回)
-1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
-1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
-1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
-1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
-1. [李佳琦直播间疑为冲销量未付先送](https://so.toutiao.com/search?keyword=李佳琦直播间疑为冲销量未付先送)
-1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
-1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
-1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
-1. [男子在药店和街头暴打女子](https://so.toutiao.com/search?keyword=男子在药店和街头暴打女子)
-1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
-1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
 1. [黎真主党50名成员在黎以冲突中死亡](https://so.toutiao.com/search?keyword=黎真主党50名成员在黎以冲突中死亡)
 1. [巴勒斯坦一记者及其11名亲属遇难](https://so.toutiao.com/search?keyword=巴勒斯坦一记者及其11名亲属遇难)
-1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
-1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
-1. [女儿不能吃东西 爸爸用针管喂流食](https://so.toutiao.com/search?keyword=女儿不能吃东西+爸爸用针管喂流食)
 1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
 1. [黎向以发射数枚迫击炮 以炮击回应](https://so.toutiao.com/search?keyword=黎向以发射数枚迫击炮+以炮击回应)
 1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
-1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
 1. [快船官方发布哈登定妆照](https://so.toutiao.com/search?keyword=快船官方发布哈登定妆照)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
-1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
 1. [警员枪支被盗 警方24小时抓获嫌犯](https://so.toutiao.com/search?keyword=警员枪支被盗+警方24小时抓获嫌犯)
 1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
 1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
 1. [三轮车转弯速度过快撞上汽车](https://so.toutiao.com/search?keyword=三轮车转弯速度过快撞上汽车)
-1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
 1. [巴以冲突一旦战争外溢意味着啥](https://so.toutiao.com/search?keyword=巴以冲突一旦战争外溢意味着啥)
 1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
 1. [“神奇女侠”加入以军？美媒辟谣](https://so.toutiao.com/search?keyword=“神奇女侠”加入以军？美媒辟谣)
 1. [阿拉伯国家为何对哈马斯反应冷淡](https://so.toutiao.com/search?keyword=阿拉伯国家为何对哈马斯反应冷淡)
-1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
 1. [胡锡进谈中美将举行军控会谈](https://so.toutiao.com/search?keyword=胡锡进谈中美将举行军控会谈)
 1. [男子多次救娃后拍视频提醒被诉侵权](https://so.toutiao.com/search?keyword=男子多次救娃后拍视频提醒被诉侵权)
 1. [马斯克对话英国首相再次称赞中国AI](https://so.toutiao.com/search?keyword=马斯克对话英国首相再次称赞中国AI)
@@ -75,7 +92,6 @@
 1. [专家谈拜登提名坎贝尔出任副国务卿](https://so.toutiao.com/search?keyword=专家谈拜登提名坎贝尔出任副国务卿)
 1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
 1. [中方：美对古巴单边强制措施须终止](https://so.toutiao.com/search?keyword=中方：美对古巴单边强制措施须终止)
-1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
 1. [为何今年肺炎支原体感染来势汹汹](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染来势汹汹)
 1. [拜登提名中国问题专家出任副国务卿](https://so.toutiao.com/search?keyword=拜登提名中国问题专家出任副国务卿)
 1. [哈马斯头号领导人到底有没有被抓](https://so.toutiao.com/search?keyword=哈马斯头号领导人到底有没有被抓)
@@ -87,7 +103,6 @@
 1. [浙江一中职毕业生拒服兵役被罚5万](https://so.toutiao.com/search?keyword=浙江一中职毕业生拒服兵役被罚5万)
 1. [副市长与同事暧昧 妻子被逼离婚](https://so.toutiao.com/search?keyword=副市长与同事暧昧+妻子被逼离婚)
 1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
-1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
 1. [俄撤销批准《全面禁止核试验条约》](https://so.toutiao.com/search?keyword=俄撤销批准《全面禁止核试验条约》)
 1. [旅游大巴撞上悬崖边护栏8人受伤](https://so.toutiao.com/search?keyword=旅游大巴撞上悬崖边护栏8人受伤)
 1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
@@ -101,7 +116,6 @@
 1. [媒体：农作物遭哄抢秋收管理需加强](https://so.toutiao.com/search?keyword=媒体：农作物遭哄抢秋收管理需加强)
 1. [缅甸国管委承认已失去3个城镇](https://so.toutiao.com/search?keyword=缅甸国管委承认已失去3个城镇)
 1. [缅甸决心年内消除缅北网赌电诈](https://so.toutiao.com/search?keyword=缅甸决心年内消除缅北网赌电诈)
-1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
 1. [媒体：宋凯全程观看中韩女足直播](https://so.toutiao.com/search?keyword=媒体：宋凯全程观看中韩女足直播)
 1. [32岁女生自曝没人追](https://so.toutiao.com/search?keyword=32岁女生自曝没人追)
 1. [前NBA球员：詹姆斯是最伟大的球员](https://so.toutiao.com/search?keyword=前NBA球员：詹姆斯是最伟大的球员)
@@ -147,7 +161,6 @@
 1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
 1. [美媒：拜登劝内塔尼亚胡考虑下台](https://so.toutiao.com/search?keyword=美媒：拜登劝内塔尼亚胡考虑下台)
 1. [海关查获8万吨福岛三文鱼？不实](https://so.toutiao.com/search?keyword=海关查获8万吨福岛三文鱼？不实)
-1. [伪造身份敛财贪官再添一人](https://so.toutiao.com/search?keyword=伪造身份敛财贪官再添一人)
 1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
 1. [康师傅回应饮品涨价](https://so.toutiao.com/search?keyword=康师傅回应饮品涨价)
 1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
@@ -159,7 +172,6 @@
 1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
 1. [外媒：华为开始夺回中国市场份额](https://so.toutiao.com/search?keyword=外媒：华为开始夺回中国市场份额)
 1. [央行：防范人民币汇率大起大落风险](https://so.toutiao.com/search?keyword=央行：防范人民币汇率大起大落风险)
-1. [拜登政府敦促国会：援乌不能停](https://so.toutiao.com/search?keyword=拜登政府敦促国会：援乌不能停)
 1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
 1. [国美总部仍有人员进出](https://so.toutiao.com/search?keyword=国美总部仍有人员进出)
 1. [雷军回应小米14发烫](https://so.toutiao.com/search?keyword=雷军回应小米14发烫)
